--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>This is my first repo in Github</h1>
     <p>I am doing code practice </p>
+    <img src="Rakib.JPG" alt="" height="200px" width="300px">
 </body>
 </html>
